# masters-wasi-spi

./: .gitignore  1_byte_rel_overhead_plot.py  Cargo.toml  README.md  bench.py  build.sh  flake.nix  guest.component.wasm  run_dvd.sh  run_pacman.sh
benchmark/guest/: Cargo.toml
benchmark/guest/src/: lib.rs
benchmark/guest/wit/: world.wit
benchmark/linux-host/: Cargo.toml
benchmark/linux-host/src/: main.rs
benchmark/native-linux-host/: Cargo.toml
benchmark/native-linux-host/src/: main.rs
benchmark/native-pico-host/: Cargo.toml
benchmark/pico-host/: Cargo.toml  build.rs
benchmark/pico-host/src/: main.rs
benchmark/pingpong/: Cargo.toml
benchmark/pingpong/src/: lib.rs
benchmark/wasm-linux-host/: Cargo.toml
benchmark/wasm-linux-host/src/: main.rs
compiler/: Cargo.toml
compiler/src/: main.rs
example-guest-component/: Cargo.toml
example-guest-component/src/: lib.rs
example-guest-component/wit/: world.wit
example-host-component/: Cargo.toml
example-host-component/src/: argument_parser.rs  lib.rs  main.rs  mock_spi.rs  spi_impl.rs  spi_trait.rs
guest/: Cargo.toml
guest-physics/: Cargo.toml
guest-physics/src/: lib.rs
guest-physics/wit/: world.wit
guest/src/: bme280.rs  lib.rs  oled.rs
guest/wit/: world.wit
guests/oled-screen/: README.md
guests/oled-screen/ball-screensaver/src/: lib.rs
guests/oled-screen/pacman/src/: lib.rs
guests/oled-screen/pacman/wit/: world.wit
guests/oled-screen/pmod-oled-driver/: policies.toml
host/: Cargo.toml  README.md  build.rs  policy.toml
host/src/: argument_parser.rs  guest.pulley  lib.rs  main.rs  mock_spi.rs  policies.rs  spi.rs
lib/delay/src/: lib.rs
lib/gpio/: Cargo.toml
lib/gpio/src/: lib.rs
lib/guest/wasi-embedded-hal/: Cargo.toml
lib/host/delay/: Cargo.toml
lib/host/gpio/src/: lib.rs
lib/spi/: Cargo.toml
lib/spi/src/: lib.rs
linux-host/: Cargo.toml  policy.toml
linux-host/src/: main.rs
pico2-quick/: Cargo.toml  build.rs  policy.toml
pico2-quick/src/: guest.pulley  main.rs
temp-display-app/: Cargo.toml
temp-display-app/src/: bme280.rs
wasi-spi/: Cargo.toml  README.md
wasi-spi/src/: ctx.rs  impls.rs  lib.rs
wasi-spi/wit/: spi.wit
wit/: clock.wit  spi.wit  timer.wit  world.wit
(+4 files in other folders)
