[workspace]
resolver = "2"

members = [
  "compiler",
  "host",
  "lib/host/spi", 
  "lib/host/delay", 
  "lib/host/gpio",
  "guest", 
  "linux-host", 
  "lib/guest/wasi-embedded-hal", 
  "benchmark/guest", 
  "benchmark/linux-host", 
  "benchmark/native-pico-host", 
  "benchmark/wasm-pico-host", 
  "benchmark/pingpong"
]

[profile.release]
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.release.package.host]
strip = false
debug = 2   
