[package]
name = "guest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.48.1"
embedded-graphics = "0.8.1"
wasi-embedded-hal = { path = "../lib/guest/wasi-embedded-hal" }
embedded-hal = "1.0.0"

# standard drivers
bme280 = "0.5.1"
ssd1306 = "0.10.0"
display-interface-spi = "0.5.0"
