[package]
name = "spi"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = { version = "41.0.1", default-features = false, features = ["component-model"] }
embassy-time = { version = "0.5.0" }
embedded-hal = "1.0"
embedded-hal-bus = "0.3"

# optional
embassy-rp = { version = "0.9.0", optional = true } 

[features]
default = ["embassy"]
embassy = ["dep:embassy-rp"]
linux = []
